bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q4 (Optimized).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: canonicalize_uuids(&explanation.optimized_logical_plan.to_string())
---
Projection: ENV_PT(first_value(product) ORDER BY [ENV_SORT(ENV_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST]) AS product, ENV_PT(first_value(label) ORDER BY [ENV_SORT(ENV_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST]) AS label, ENV_PT(first_value(propertyTextual) ORDER BY [ENV_SORT(ENV_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST]) AS propertyTextual
  Limit: skip=5, fetch=10
    Sort: ENV_SORT(ENV_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST, fetch=15
      Aggregate: groupBy=[[__common_expr_1 AS ENV_SORT(ENV_PT(label)), product, propertyTextual]], aggr=[[first_value(product) ORDER BY [__common_expr_1 AS ENV_SORT(ENV_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST] AS first_value(product) ORDER BY [ENV_SORT(ENV_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST], first_value(label) ORDER BY [__common_expr_1 AS ENV_SORT(ENV_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST] AS first_value(label) ORDER BY [ENV_SORT(ENV_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST], first_value(propertyTextual) ORDER BY [__common_expr_1 AS ENV_SORT(ENV_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST] AS first_value(propertyTextual) ORDER BY [ENV_SORT(ENV_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST]]]
        Projection: ENV_SORT(ENV_PT(label)) AS __common_expr_1, product, label, propertyTextual
          Sort: ENV_SORT(ENV_PT(label)) ASC NULLS FIRST
            Union
              Projection: lhs.product AS product, rhs.label AS label, rhs.propertyTextual AS propertyTextual
                Inner Join: lhs.product = rhs.product
                  SubqueryAlias: lhs
                    QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1427>), active_graph: Union of [DefaultGraph] 
                  SubqueryAlias: rhs
                    Projection: lhs.product AS product, rhs.label AS label, rhs.propertyTextual AS propertyTextual
                      Inner Join: lhs.product = rhs.product
                        SubqueryAlias: lhs
                          QuadPattern (?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType138>), active_graph: Union of [DefaultGraph] 
                        SubqueryAlias: rhs
                          Projection: lhs.product AS product, rhs.label AS label, rhs.propertyTextual AS propertyTextual
                            Inner Join: lhs.product = rhs.product
                              SubqueryAlias: lhs
                                QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4305>), active_graph: Union of [DefaultGraph] 
                              SubqueryAlias: rhs
                                Projection: lhs.product AS product, lhs.label AS label, rhs.propertyTextual AS propertyTextual
                                  Inner Join: lhs.product = rhs.product
                                    SubqueryAlias: lhs
                                      QuadPattern (?product <http://www.w3.org/2000/01/rdf-schema#label> ?label), active_graph: Union of [DefaultGraph] 
                                    SubqueryAlias: rhs
                                      Projection: lhs.product AS product, lhs.propertyTextual AS propertyTextual
                                        Inner Join: lhs.product = rhs.product
                                          SubqueryAlias: lhs
                                            QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual1> ?propertyTextual), active_graph: Union of [DefaultGraph] 
                                          SubqueryAlias: rhs
                                            Projection: product
                                              Filter: EBV(GT(ENC_TV(p1), Union 9:457))
                                                QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?p1), active_graph: Union of [DefaultGraph] 
              Projection: lhs.product AS product, rhs.label AS label, rhs.propertyTextual AS propertyTextual
                Inner Join: lhs.product = rhs.product
                  SubqueryAlias: lhs
                    QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1444>), active_graph: Union of [DefaultGraph] 
                  SubqueryAlias: rhs
                    Projection: lhs.product AS product, rhs.label AS label, rhs.propertyTextual AS propertyTextual
                      Inner Join: lhs.product = rhs.product
                        SubqueryAlias: lhs
                          QuadPattern (?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType138>), active_graph: Union of [DefaultGraph] 
                        SubqueryAlias: rhs
                          Projection: lhs.product AS product, rhs.label AS label, rhs.propertyTextual AS propertyTextual
                            Inner Join: lhs.product = rhs.product
                              SubqueryAlias: lhs
                                QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4305>), active_graph: Union of [DefaultGraph] 
                              SubqueryAlias: rhs
                                Projection: lhs.product AS product, lhs.label AS label, rhs.propertyTextual AS propertyTextual
                                  Inner Join: lhs.product = rhs.product
                                    SubqueryAlias: lhs
                                      QuadPattern (?product <http://www.w3.org/2000/01/rdf-schema#label> ?label), active_graph: Union of [DefaultGraph] 
                                    SubqueryAlias: rhs
                                      Projection: lhs.product AS product, lhs.propertyTextual AS propertyTextual
                                        Inner Join: lhs.product = rhs.product
                                          SubqueryAlias: lhs
                                            QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual1> ?propertyTextual), active_graph: Union of [DefaultGraph] 
                                          SubqueryAlias: rhs
                                            Projection: product
                                              Filter: EBV(GT(ENC_TV(p2), Union 9:488))
                                                QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?p2), active_graph: Union of [DefaultGraph]
