bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q5 (Initial).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: canonicalize_uuids(&explanation.initial_logical_plan.to_string())
---
Projection: ENV_PT(product) AS product, ENV_PT(productLabel) AS productLabel
  Limit: skip=0, fetch=5
    DistinctOn: on_expr=[[ENV_SORT(ENV_PT(productLabel)), product]], select_expr=[[product, productLabel]], sort_expr=[[ENV_SORT(ENV_PT(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST]]
      Projection: product, productLabel
        Sort: ENV_SORT(ENV_PT(productLabel)) ASC NULLS FIRST
          Filter: EBV(BOOLEAN_AS_TERM(coalesce(EBV(BOOLEAN_AS_TERM(coalesce(EBV(BOOLEAN_AS_TERM(NOT EBV(EQ(ENC_TV(Struct({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890,data_type:,language_tag:})), ENC_TV(product))))), Boolean(false)) AND coalesce(EBV(BOOLEAN_AS_TERM(coalesce(EBV(LT(ENC_TV(simProperty1), ADD(ENC_TV(origProperty1), ENC_TV(Struct({term_type:2,value:120,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:}))))), Boolean(false)) AND coalesce(EBV(GT(ENC_TV(simProperty1), SUB(ENC_TV(origProperty1), ENC_TV(Struct({term_type:2,value:120,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:}))))), Boolean(false)))), Boolean(false)))), Boolean(false)) AND coalesce(EBV(BOOLEAN_AS_TERM(coalesce(EBV(LT(ENC_TV(simProperty2), ADD(ENC_TV(origProperty2), ENC_TV(Struct({term_type:2,value:170,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:}))))), Boolean(false)) AND coalesce(EBV(GT(ENC_TV(simProperty2), SUB(ENC_TV(origProperty2), ENC_TV(Struct({term_type:2,value:170,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:}))))), Boolean(false)))), Boolean(false))))
            SparqlJoin: Inner 
              SparqlJoin: Inner 
                SparqlJoin: Inner 
                  SparqlJoin: Inner 
                    SparqlJoin: Inner 
                      SparqlJoin: Inner 
                        QuadPattern (?product <http://www.w3.org/2000/01/rdf-schema#label> ?productLabel), active_graph: Union of [DefaultGraph] 
                        QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?prodFeature), active_graph: Union of [DefaultGraph] 
                      QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?prodFeature), active_graph: Union of [DefaultGraph] 
                    QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?origProperty1), active_graph: Union of [DefaultGraph] 
                  QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?simProperty1), active_graph: Union of [DefaultGraph] 
                QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?origProperty2), active_graph: Union of [DefaultGraph] 
              QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?simProperty2), active_graph: Union of [DefaultGraph]
