bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q7 (Initial).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: canonicalize_uuids(&explanation.initial_logical_plan.to_string())
---
Projection: ENV_PT(productLabel) AS productLabel, ENV_PT(offer) AS offer, ENV_PT(price) AS price, ENV_PT(vendor) AS vendor, ENV_PT(vendorTitle) AS vendorTitle, ENV_PT(review) AS review, ENV_PT(revTitle) AS revTitle, ENV_PT(reviewer) AS reviewer, ENV_PT(revName) AS revName, ENV_PT(rating1) AS rating1, ENV_PT(rating2) AS rating2
  Projection: productLabel, offer, price, vendor, vendorTitle, review, revTitle, reviewer, revName, rating1, rating2
    SparqlJoin: Left 
      SparqlJoin: Left EBV(GT(ENC_TV(date), ENC_TV(Struct({term_type:2,value:2008-06-20T00:00:00,data_type:http://www.w3.org/2001/XMLSchema#dateTime,language_tag:}))))
        QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801> <http://www.w3.org/2000/01/rdf-schema#label> ?productLabel), active_graph: Union of [DefaultGraph] 
        SparqlJoin: Inner 
          SparqlJoin: Inner 
            SparqlJoin: Inner 
              SparqlJoin: Inner 
                SparqlJoin: Inner 
                  SparqlJoin: Inner 
                    QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801>), active_graph: Union of [DefaultGraph] 
                    QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price), active_graph: Union of [DefaultGraph] 
                  QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor), active_graph: Union of [DefaultGraph] 
                QuadPattern (?vendor <http://www.w3.org/2000/01/rdf-schema#label> ?vendorTitle), active_graph: Union of [DefaultGraph] 
              QuadPattern (?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#DE>), active_graph: Union of [DefaultGraph] 
            QuadPattern (?offer <http://purl.org/dc/elements/1.1/publisher> ?vendor), active_graph: Union of [DefaultGraph] 
          QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?date), active_graph: Union of [DefaultGraph] 
      SparqlJoin: Left 
        SparqlJoin: Left 
          SparqlJoin: Inner 
            SparqlJoin: Inner 
              SparqlJoin: Inner 
                QuadPattern (?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801>), active_graph: Union of [DefaultGraph] 
                QuadPattern (?review <http://purl.org/stuff/rev#reviewer> ?reviewer), active_graph: Union of [DefaultGraph] 
              QuadPattern (?reviewer <http://xmlns.com/foaf/0.1/name> ?revName), active_graph: Union of [DefaultGraph] 
            QuadPattern (?review <http://purl.org/dc/elements/1.1/title> ?revTitle), active_graph: Union of [DefaultGraph] 
          QuadPattern (?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?rating1), active_graph: Union of [DefaultGraph] 
        QuadPattern (?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?rating2), active_graph: Union of [DefaultGraph]
