bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q8 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: canonicalize_uuids(&string)
---
ProjectionExec: expr=[ENV_PT(title@2) as title, ENV_PT(text@1) as text, ENV_PT(reviewDate@0) as reviewDate, ENV_PT(reviewer@3) as reviewer, ENV_PT(reviewerName@4) as reviewerName, ENV_PT(rating1@5) as rating1, ENV_PT(rating2@6) as rating2, ENV_PT(rating3@7) as rating3, ENV_PT(rating4@8) as rating4]
  SortExec: TopK(fetch=20), expr=[ENV_SORT(ENV_PT(reviewDate@0)) DESC], preserve_partitioning=[false]
    CoalesceBatchesExec: target_batch_size=8192
      HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[reviewDate@1, text@2, title@3, reviewer@4, reviewerName@5, rating1@6, rating2@7, rating3@8, rating4@10]
        CoalesceBatchesExec: target_batch_size=8192
          HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, reviewDate@1, text@2, title@3, reviewer@4, reviewerName@5, rating1@6, rating2@7, rating3@9]
            CoalesceBatchesExec: target_batch_size=8192
              HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, reviewDate@1, text@2, title@3, reviewer@4, reviewerName@5, rating1@6, rating2@8]
                CoalesceBatchesExec: target_batch_size=8192
                  HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, reviewDate@1, text@2, title@3, reviewer@4, reviewerName@5, rating1@7]
                    CoalesceBatchesExec: target_batch_size=8192
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, reviewDate@2, text@3, title@4, reviewer@5, reviewerName@6]
                        QuadPatternExec: n_graphs=1, subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product578>
                        CoalesceBatchesExec: target_batch_size=8192
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, reviewDate@1, text@3, title@4, reviewer@5, reviewerName@6]
                            QuadPatternExec: n_graphs=1, subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewDate>, object=?reviewDate
                            CoalesceBatchesExec: target_batch_size=8192
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, text@1, title@3, reviewer@4, reviewerName@5]
                                CoalesceBatchesExec: target_batch_size=8192
                                  FilterExec: EBV(LANGMATCHES(LANG(ENC_TV(text@1)), 3:{value:EN,language:}))
                                    QuadPatternExec: n_graphs=1, subject=?review, predicate=<http://purl.org/stuff/rev#text>, object=?text
                                CoalesceBatchesExec: target_batch_size=8192
                                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, title@1, reviewer@3, reviewerName@4]
                                    QuadPatternExec: n_graphs=1, subject=?review, predicate=<http://purl.org/dc/elements/1.1/title>, object=?title
                                    CoalesceBatchesExec: target_batch_size=8192
                                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@1, reviewer@0)], projection=[review@0, reviewer@1, reviewerName@3]
                                        QuadPatternExec: n_graphs=1, subject=?review, predicate=<http://purl.org/stuff/rev#reviewer>, object=?reviewer
                                        QuadPatternExec: n_graphs=1, subject=?reviewer, predicate=<http://xmlns.com/foaf/0.1/name>, object=?reviewerName
                    QuadPatternExec: n_graphs=1, subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1>, object=?rating1
                QuadPatternExec: n_graphs=1, subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2>, object=?rating2
            QuadPatternExec: n_graphs=1, subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3>, object=?rating3
        QuadPatternExec: n_graphs=1, subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4>, object=?rating4
