bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q8 (Initial).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: canonicalize_uuids(&explanation.initial_logical_plan.to_string())
---
Projection: ENC_PT(title) AS title, ENC_PT(text) AS text, ENC_PT(reviewDate) AS reviewDate, ENC_PT(reviewer) AS reviewer, ENC_PT(reviewerName) AS reviewerName, ENC_PT(rating1) AS rating1, ENC_PT(rating2) AS rating2, ENC_PT(rating3) AS rating3, ENC_PT(rating4) AS rating4
  Limit: skip=0, fetch=20
    Projection: title, text, reviewDate, reviewer, reviewerName, rating1, rating2, rating3, rating4
      Sort: ENC_SORT(ENC_PT(reviewDate)) DESC NULLS FIRST
        Filter: EBV(LANGMATCHES(LANG(ENC_TV(text)), ENC_TV(Struct({term_type:2,value:EN,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:}))))
          SparqlJoin: Left 
            SparqlJoin: Left 
              SparqlJoin: Left 
                SparqlJoin: Left 
                  SparqlJoin: Inner 
                    SparqlJoin: Inner 
                      SparqlJoin: Inner 
                        SparqlJoin: Inner 
                          SparqlJoin: Inner 
                            QuadPattern (?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product578>), active_graph: Union of [DefaultGraph] 
                            QuadPattern (?review <http://purl.org/dc/elements/1.1/title> ?title), active_graph: Union of [DefaultGraph] 
                          QuadPattern (?review <http://purl.org/stuff/rev#text> ?text), active_graph: Union of [DefaultGraph] 
                        QuadPattern (?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewDate> ?reviewDate), active_graph: Union of [DefaultGraph] 
                      QuadPattern (?review <http://purl.org/stuff/rev#reviewer> ?reviewer), active_graph: Union of [DefaultGraph] 
                    QuadPattern (?reviewer <http://xmlns.com/foaf/0.1/name> ?reviewerName), active_graph: Union of [DefaultGraph] 
                  QuadPattern (?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?rating1), active_graph: Union of [DefaultGraph] 
                QuadPattern (?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?rating2), active_graph: Union of [DefaultGraph] 
              QuadPattern (?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> ?rating3), active_graph: Union of [DefaultGraph] 
            QuadPattern (?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> ?rating4), active_graph: Union of [DefaultGraph]
