bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q9 (Initial).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: canonicalize_uuids(&explanation.initial_logical_plan.to_string())
---
Projection: ENC_PT(x) AS x, ENC_PT(00000000000000000000000000000001) AS 00000000000000000000000000000001, ENC_PT(00000000000000000000000000000002) AS 00000000000000000000000000000002
  SparqlJoin: Inner 
    Projection: x
      QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review4194> <http://purl.org/stuff/rev#reviewer> ?x), active_graph: Union of [DefaultGraph] 
    SparqlJoin: Inner 
      QuadPattern (?x <http://www.w3.org/2000/01/rdf-schema#label> _:00000000000000000000000000000001), active_graph: Union of [DefaultGraph] 
      QuadPattern (?x <http://www.w3.org/2000/01/rdf-schema#comment> _:00000000000000000000000000000002), active_graph: Union of [DefaultGraph]
